--- a/server/DockerFile
+++ b/server/DockerFile
@@ -1,20 +1,5 @@
-# Use an official Node.js runtime as a parent image
-FROM node:18
-
-# Set the working directory in the container
-WORKDIR /usr/src/app
-
-# Copy package.json and package-lock.json (or yarn.lock) to the container
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy the rest of the application code to the container
+FROM node
 COPY . .
-
-# Expose the port the app runs on
+RUN npm install
 EXPOSE 4000
-
-# Command to run the Express server
-CMD ["node", "index.js"]
+CMD ["node","index.js"]
