--- a/client/DockerFile
+++ b/client/DockerFile
@@ -1,6 +1,7 @@
 # Use an official Node.js runtime as the base image
 FROM node:18
 
+ENV VITE_API_URL=http://65.0.45.229/:4000/
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
