--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,14 @@ services:
     build: ./server/
     ports:
       - "4000:4000"
+    environment:
+     - MONGODB_URL=${MONGODB_URL}
+     - SECRET=${SECRET}
+     - API_KEY=${API_KEY}
 
   react:
     build: ./client/
     ports:
       - "80:80"
+    environment:
+    - VITE_API_URL=${VITE_API_URL}
