--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
 
   express:
     build: ./server/
+    image: express:latest
     ports:
       - "4000:4000"
     environment:
@@ -11,5 +12,6 @@ services:
 
   react:
     build: ./client/
+    image: react:latest
     ports:
       - "80:80"
